[gd_scene load_steps=8 format=3 uid="uid://bpxe78h5nh7tw"]

[ext_resource type="Script" path="res://scripts/VictoryScreen.gd" id="1_sqof0"]
[ext_resource type="PackedScene" uid="uid://cffa7qodu0m4t" path="res://scenes/MenuScreen.tscn" id="2_jxkwy"]
[ext_resource type="Texture2D" uid="uid://2y3evbo6ac36" path="res://textures/HUD/button.png" id="3_iq02y"]
[ext_resource type="Texture2D" uid="uid://mdtlf2upi31y" path="res://textures/HUD/buttonhover.png" id="4_c1u76"]
[ext_resource type="FontFile" uid="uid://cnuhbnlmaseqv" path="res://fonts/Bungee-Regular.otf" id="5_qodh7"]
[ext_resource type="FontFile" uid="uid://byt7wrndfoqim" path="res://fonts/ChangaOne-Regular.ttf" id="6_jjjhj"]

[sub_resource type="LabelSettings" id="LabelSettings_bsiyj"]
font = ExtResource("5_qodh7")
font_size = 28
font_color = Color(0.643137, 0.572549, 0.372549, 1)
shadow_size = 2
shadow_color = Color(0.427451, 0.392157, 0.298039, 1)
shadow_offset = Vector2(-1, -1.5)

[node name="VicroryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqof0")

[node name="MenuScreen" parent="." instance=ExtResource("2_jxkwy")]
layout_mode = 1

[node name="RestartGameButton" type="TextureButton" parent="MenuScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.922
anchor_right = 0.5
anchor_bottom = 0.922
offset_left = -128.0
offset_top = -291.76
offset_right = 120.0
offset_bottom = -163.76
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_iq02y")
texture_hover = ExtResource("4_c1u76")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MenuScreen/RestartGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -24.0
offset_right = 102.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART
GAME"
label_settings = SubResource("LabelSettings_bsiyj")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="SubmitButton" type="TextureButton" parent="MenuScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.922
anchor_right = 0.5
anchor_bottom = 0.922
offset_left = 112.0
offset_top = -115.76
offset_right = 344.0
offset_bottom = -11.76
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_iq02y")
texture_hover = ExtResource("4_c1u76")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MenuScreen/SubmitButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.462
anchor_right = 0.5
anchor_bottom = 0.462
offset_left = -60.0
offset_top = -16.048
offset_right = 58.0
offset_bottom = 22.952
grow_horizontal = 2
grow_vertical = 2
text = "Submit"
label_settings = SubResource("LabelSettings_bsiyj")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="LineEdit" type="LineEdit" parent="MenuScreen"]
layout_mode = 0
offset_left = 760.0
offset_top = 896.0
offset_right = 1046.0
offset_bottom = 960.0
theme_override_colors/font_color = Color(0.917647, 0.854902, 0.584314, 1)
theme_override_fonts/font = ExtResource("6_jjjhj")
theme_override_font_sizes/font_size = 36
placeholder_text = "Nickname"
max_length = 12

[connection signal="pressed" from="MenuScreen/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="MenuScreen/SubmitButton" to="." method="_on_submit_button_pressed"]
